# docs/swagger.yaml
@@ -6,6 +6,15 @@ definitions:
       date:
         type: string
     type: object
+  api.CountGames:
+    properties:
+      amount:
+        type: string
+      date:
+        type: string
+      status:
+        type: string
+    type: object
   api.Overview:
     properties:
       challengerWinGamesCount:
@@ -93,7 +102,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.AmountPerDay'
+              $ref: '#/definitions/api.CountGames'
             type: array
       summary: GetCountDisputeGameGroupByStatus
   /disputegames/credit/rank:
